updated contact information and education

--- a/index.html
+++ b/index.html
@@ -76,12 +76,21 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div id="Education" class="w3-card-4 w3-margin w3-2018-almost-mauve">
     <div class="w3-container">
       <h3><b>Education</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+      <h5>Barnard College of Columbia University </h5>
     </div>
 
     <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+    	<h5>Relavent Coursework:</h5>
+      <ul style="list-style-type: circle;">
+      	<li>Introduction to Java</li>
+      	<li>Data Structures in Java</li>
+      	<li>Discrete Mathematics</li>
+      	<li>Advanced Programming</li>
+      	<li>Computer Science Theory</li>
+      	<li>Fundamentals of Computer Systems</li>
+      	<li>Probability and Statistics</li>
+      	<li>Artificial Intelligence</li>
+      </ul>
     </div>
   </div>
 
@@ -102,20 +111,21 @@ and is wrapped around the whole page content, except for the footer in this exam
 </div>
 
 <!-- Introduction menu -->
-<div class="w3-cell 20">
+<div class="w3-cell">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-    <div class="w3-container w3-camo-black">
-      <h4><b>Contact Me</b></h4>
-      <p><i>self. </i>phone_number = </p>
-      <p>610-751-7994</p>
+    <div class="w3-container w3-2018-almost-mauve">
+      <h4 class="w3-text-dark-gray w3-center"><b><i>Contact Me</i></b></h4>
+      <p><i class="fa fa-phone fa-fw w3-margin-right w3-2018-blooming-dahlia"></i>610-751-7994</p>
+      <p><i class="fa fa-envelope fa-fw w3-2018-blooming-dahlia"></i>courtney.mok.hk@gmail.com</p>
+      <p><i class="fa fa-home fa-fw w3-margin-right w3-2018-blooming-dahlia"></i>New York/Hong Kong</p>
     </div>
   </div>
   
   <!-- Posts -->
-  <div class="w3-card w3-margin">
+  <div class=" w3-card w3-margin">
     <div class="w3-container w3-padding w3-2018-almost-mauve">
-      <h4><b>Skills</b></h4>
+      <h4 class="w3-center w3-text-dark-gray"><b>Skills</b></h4>
     </div>
     <ul class="w3-ul w3-hoverable w3-2018-almost-mauve">
       <li class="w3-padding-16">
@@ -158,6 +168,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-github w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
 </body>
