--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Courtney Mok</title>
+<title>Courtney Kaye Mok</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2018.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-camo.css">
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+body,h1,h2,h3,h4,h5,h6,h7,h8,h9 {margin-top:-1px;margin-bottom:-1px; font-family: "Raleway", sans-serif}
+ul, p {margin-top:-1px;}
 </style>
 <body class="w3-2018-blooming-dahlia">
 
@@ -65,8 +66,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p class="w3-margin-left w3-text-light-blue">print<span class="w3-text-white">(</span><span class="w3-text-amber"> "Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla."</span><span class="w3-text-white">)</span></p>
+      <p class="w3-margin-left w3-text-light-blue">print<span class="w3-text-white">(</span><span class="w3-text-amber"> "I love learning languages! As of right now I know 8: English, Mandarin, Cantonese, Japanese, Korean, Java, Python, and C. "</span><span class="w3-text-white">)</span></p>
       
     </div>
   </div>
@@ -76,11 +76,11 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div id="Education" class="w3-card-4 w3-margin w3-2018-almost-mauve">
     <div class="w3-container">
       <h3><b>Education</b></h3>
-      <h5>Barnard College of Columbia University </h5>
+      <h5><b>Barnard College of Columbia University </b><span class="w3-opacity"> May 2020</span></h5>
     </div>
-
-    <div class="w3-container">
-    	<h5>Relavent Coursework:</h5>
+    <div class="w3-container w3-margin-left ">
+    	<h6><b>GPA:</b> 3.55</h6>
+    	<h6><b>Computer Science Coursework:</b></h6>
       <ul style="list-style-type: circle;">
       	<li>Introduction to Java</li>
       	<li>Data Structures in Java</li>
@@ -91,22 +91,26 @@ and is wrapped around the whole page content, except for the footer in this exam
       	<li>Probability and Statistics</li>
       	<li>Artificial Intelligence</li>
       </ul>
+      <h6><b>Languages I am Currently Studying:</b></h6>
+      <ul style="list-style-type: circle;">
+      	<li>Japanese: <span class ="w3-text-dark-gray"> 3 years </span></li>
+      	<li>Korean: <span class="w3-text-dark-gray"> 2 years </span></li>
+      </ul>
+    </div>
+    <div class="w3-container">
+   		<h5>Seoul National University</h5>
+    </div>
+    <div class="w3-container w3-margin-left">
+    	<h6>Study Abroad</h6>
+    </div>
+    <div class="w3-container w3-margin-left">
+    	<p class="w3-margin-left">Stuff I did!!!</p>
     </div>
   </div>
 
 
   <!-- Projects -->
-  <div id="Projects" class="w3-card-4 w3-margin w3-2018-almost-mauve">
-    <div class="w3-container">
-      <h3><b>Projects</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
-    </div>
-
-    <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-    </div>
-  </div>
+  
 <!-- END BLOG ENTRIES -->
 </div>
 
@@ -125,28 +129,32 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- Posts -->
   <div class=" w3-card w3-margin">
     <div class="w3-container w3-padding w3-2018-almost-mauve">
-      <h4 class="w3-center w3-text-dark-gray"><b>Skills</b></h4>
+      <h3 class="w3-center w3-text-dark-gray"><b>Skills</b></h3>
     </div>
     <ul class="w3-ul w3-hoverable w3-2018-almost-mauve">
       <li class="w3-padding-16">
-        <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Lorem</span><br>
-        <span>Sed mattis nunc</span>
+        <span class="w3-medium">Proficient Programming Languages:</span><br>
+        <span class="w3-margin-left"> - Python</span><br>
+        <span class="w3-margin-left"> - Java</span><br>
+        <span class="w3-margin-left"> - HTML</span>
       </li>
       <li class="w3-padding-16">
-        <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Ipsum</span><br>
-        <span>Praes tinci sed</span>
+        <span class="w3-large">Familiar With: </span><br>
+        <span class="w3-margin-left"> - C++</span><br>
+        <span class="w3-margin-left"> - LaTeX</span><br>
       </li> 
       <li class="w3-padding-16">
-        <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Dorum</span><br>
-        <span>Ultricies congue</span>
+        <span class="w3-large">Spoken Languages:</span><br>
+        <span class="w3-margin-left"> - Mandarin</span><br>
+        <span class="w3-margin-left"> - Cantonese</span><br>
+        <span class="w3-margin-left"> - Japanese</span><br>
+        <span class="w3-margin-left"> - Korean</span>
       </li>   
-      <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-        <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Mingsum</span><br>
-        <span>Lorem ipsum dipsum</span>
+      <li class="w3-padding-16">
+        <span class="w3-large">Arts:</span><br>
+        <span class="w3-margin-left"> - Procreate</span><br>
+        <span class="w3-margin-left"> - Clip Studio Paint</span><br>
+        <span class="w3-margin-left"> - Adobe Photoshop</span>
       </li>  
     </ul>
   </div>
@@ -155,13 +163,36 @@ and is wrapped around the whole page content, except for the footer in this exam
   
 <!-- END Introduction Menu -->
 </div>
+<div id="Projects" class="w3-card-4 w3-margin w3-2018-almost-mauve">
+    <div class="w3-container">
+      <h3><b>Projects</b></h3>
+      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+    </div>
+
+    <div class="w3-container">
+      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
+        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+    </div>
+  </div>
+
+  </div>
+<div id="Fun Things" class="w3-card-4 w3-margin w3-2018-almost-mauve">
+    <div class="w3-container">
+      <h3><b>Fun Things</b></h3>
+      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+    </div>
+
+    <div class="w3-container">
+      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
+        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+    </div>
+  </div>
 
 <!-- END GRID -->
 </div><br>
 
 <!-- END w3-content -->
 </div>
-
 
 <footer class="w3-container w3-2018-almost-mauve w3-center w3-margin-top">
   <p>Find me on social media.</p>
