--- a/index.html
+++ b/index.html
@@ -166,25 +166,42 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div id="Projects" class="w3-card-4 w3-margin w3-2018-almost-mauve">
     <div class="w3-container">
       <h3><b>Projects</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
     </div>
 
     <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <!-- video game-->
+      <h5>The Witch and The Princess, <span class="w3-opacity">Python</span></h5>
+      <p class="w3-margin-left">A side scroller game I'm working on using Python/Pygame. I have the individual classes set up and I'm working on the design for level one. I want to eventually integrate story-telling elements. I drew the sprite sheet myself!</p>
+      <div class = "row w3-center">
+        <div class = "column">
+          <img src="sheet.png" alt="sprite_sheet" width = 400>
+        </div>
+        <div class = "column">
+          <img src="walking.png" alt="level_one" width = 400>
+        </div>
+        <div class = "column">
+          <img src ="flying.png" alt="flying" width = 400>
+        </div>
     </div>
   </div>
 
+
+  <div class = "w3-container w3-padding-16">
+  <!-- second project -->
+    <h5>This Website!, <span class ="w3-opacity">HTML</span></h5>
+    <p class="w3-margin-left"> I used a W3.CSS template and then made a lot of changes to match the design I created. I created this website as a way to consitently practice coding in HTML, as well as having something a little more personal than just a resume. I drew a rough template of what I wanted on Procreate:</p>
+    <div class = "w3-center w3-padding-large">
+    <img src="website_temp.png" alt="website_drawing" width = 400>
+    </div>
   </div>
+</div>
 <div id="Fun Things" class="w3-card-4 w3-margin w3-2018-almost-mauve">
     <div class="w3-container">
       <h3><b>Fun Things</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
-    </div>
-
-    <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <h5>A drawing I'm currently working on:</h5>
+      <div class ="w3-container w3-center w3-padding-large">
+        <img src ="neon_lights_drawing.png" alt="currently_drawing" width = 600>
+      </div>
     </div>
   </div>
 
