--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class ="w3-container w3-center w3-padding-large">
         <img src ="neon_lights_drawing.png" alt="currently_drawing" width = 600>
       </div>
+      <h5>Some macarons I baked:</h5>
+      <div class="w3-container w3-center w3-padding-large">
+        <img src = "ryan_macaron.jpeg" alt="macarons" width = 600>
+      </div>
     </div>
   </div>
 
