--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- Education -->
   <div id="Education" class="w3-card-4 w3-margin w3-2018-almost-mauve">
     <div class="w3-container">
-      <h3><b>Education</b></h3>
+      <h2><b>Education</b></h2>
       <h5><b>Barnard College of Columbia University </b><span class="w3-opacity"> May 2020</span></h5>
     </div>
     <div class="w3-container w3-margin-left ">
@@ -131,9 +131,9 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-padding w3-2018-almost-mauve">
       <h3 class="w3-center w3-text-dark-gray"><b>Skills</b></h3>
     </div>
-    <ul class="w3-ul w3-hoverable w3-2018-almost-mauve">
+    <ul class="w3-ul w3-2018-almost-mauve">
       <li class="w3-padding-16">
-        <span class="w3-medium">Proficient Programming Languages:</span><br>
+        <span class="w3-large">Proficient Programming Languages:</span><br>
         <span class="w3-margin-left"> - Python</span><br>
         <span class="w3-margin-left"> - Java</span><br>
         <span class="w3-margin-left"> - HTML</span>
@@ -165,7 +165,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 </div>
 <div id="Projects" class="w3-card-4 w3-margin w3-2018-almost-mauve">
     <div class="w3-container">
-      <h3><b>Projects</b></h3>
+      <h2><b>Projects</b></h2>
     </div>
 
     <div class="w3-container">
@@ -197,7 +197,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 </div>
 <div id="Fun Things" class="w3-card-4 w3-margin w3-2018-almost-mauve">
     <div class="w3-container">
-      <h3><b>Fun Things</b></h3>
+      <h2><b>Fun Things</b></h2>
       <h5>A drawing I'm currently working on:</h5>
       <div class ="w3-container w3-center w3-padding-large">
         <img src ="neon_lights_drawing.png" alt="currently_drawing" width = 600>
