--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-right w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button">About</a>
       <a href="blogposts.html" class="w3-bar-item w3-button">Blog Posts</a>
-      <a href="#contact" class="w3-bar-item w3-button">Resume</a>
+      <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-button">Resume</a>
     </div>
   </div>
 </div>
@@ -79,23 +79,25 @@ and is wrapped around the whole page content, except for the footer in this exam
       <h5><b>Barnard College of Columbia University </b><span class="w3-opacity"> May 2020</span></h5>
     </div>
     <div class="w3-container w3-margin-left ">
-    	<h6><b>GPA:</b> 3.55</h6>
+    	<h6><b>Major:</b> Computer Science - Intelligent Systems</h6>
     	<h6><b>Computer Science Coursework:</b></h6>
       <ul style="list-style-type: circle;">
-      	<li>Introduction to Java</li>
-      	<li>Data Structures in Java</li>
-      	<li>Discrete Mathematics</li>
-      	<li>Advanced Programming</li>
-      	<li>Computer Science Theory</li>
-      	<li>Fundamentals of Computer Systems</li>
-      	<li>Probability and Statistics</li>
       	<li>Artificial Intelligence</li>
+        <li>Natural Language Processing</li>
+        <li>Data Visualization</li>
+        <li>Visual Interfaces to Computer Systems</li>
+        <li>Probability and Statistics</li>
+        <li>Linear Algebra</li>
       </ul>
-      <h6><b>Languages I am Currently Studying:</b></h6>
-      <ul style="list-style-type: circle;">
-      	<li>Japanese: <span class ="w3-text-dark-gray"> 3 years </span></li>
-      	<li>Korean: <span class="w3-text-dark-gray"> 2 years </span></li>
-      </ul>
+    </div>
+    <div class="w3-container">
+      <h2><b>Notable Projects</b></h2>
+      <h4><b>Jinshin Jiko</b> - <i>JavaScript(D3), Python</i></h4>
+      <h6> A collaboritive data story on Japan's 人身事故 (Suicides by Train) in Japan. We scraped and cleaned raw data from <a href="https://jinshinjiko.com/">Laboneko's site</a> and added each station's geolocation data using <a href="https://locationiq.com/">LocationIQ's geocoding API</a>. Using this data we developed a data story with interactive data visualziations using D3.
+      <h6><a href="https://japantrainincidents.github.io/">Final Product</a><br><br>
+      <h4><b>Paper Doll</b> - <i>Python(OpenCV)</i></h4>
+      <h6> An application that allows a user to try on clothing and accessories using their webcam. Developed using OpenCV and haars cascades to transform articles of clothing and fit them over a live video.
+      <br><br><br>
     </div>
   </div>
 
@@ -122,43 +124,43 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-padding" style="background-color: #F5E1FD">
       <h3 class="w3-center w3-text-dark-gray"><b>Technical Skills</b></h3>
     </div>
-    <ul class="w3-ul" style="background-color: #F5E1FD">
-      <li class="w3-padding-16">
-        <span class="w3-large">Programming:</span><br>
-        <span class="w3-margin-left"> - Python</span><br>
-        <span class="w3-margin-left"> - Java</span><br>
-        <span class="w3-margin-left"> - JavaScript</span><br>
-        <span class="w3-margin-left"> - HTML5/CSS</span>
+    <ul class="w3-ul" style="background-color: #F5E1FD;" >
+      <li class="w3-padding-16" >
+        <span class="w3-large"><b>Programming:</b></span><br>
+        <span class="w3-margin-left">Python</span><br>
+        <span class="w3-margin-left">Java</span><br>
+        <span class="w3-margin-left">JavaScript</span><br>
+        <span class="w3-margin-left">HTML5/CSS</span>
       </li>
       <li class="w3-padding-16">
-        <span class="w3-large">Data Modeling: </span><br>
-        <span class="w3-margin-left"> - Tableau</span><br>
+        <span class="w3-large"><b>Data Modeling: </b></span><br>
+        <span class="w3-margin-left">Tableau</span><br>
       </li> 
       <li class="w3-padding-16">
-        <span class="w3-large">Collaboration: </span><br>
-        <span class="w3-margin-left"> - Git</span><br>
-        <span class="w3-margin-left"> - Google Cloud</span><br>
-        <span class="w3-margin-left"> - Jupyter Notebook</span><br>
+        <span class="w3-large"><b>Collaboration: </b></span><br>
+        <span class="w3-margin-left">Git</span><br>
+        <span class="w3-margin-left">Google Cloud</span><br>
+        <span class="w3-margin-left">Jupyter Notebook</span><br>
       </li> 
       <li class="w3-padding-16">
         <span class="w3-large"><b>Graphic Design: </b></span><br>
-        <span class="w3-margin-left"> - Adobe Photoshop</span><br>
-        <span class="w3-margin-left"> - Clipart Studio</span><br>
-        <span class="w3-margin-left"> - Procreate</span><br>
+        <span class="w3-margin-left">Adobe Photoshop</span><br>
+        <span class="w3-margin-left">Clipart Studio</span><br>
+        <span class="w3-margin-left">Procreate</span><br>
       </li> 
       <div class="w3-container w3-padding">
       <h3 class="w3-center w3-text-dark-gray"><b>Languages</b></h3>
   		</div>
       <li class="w3-padding-16">
         <span class="w3-large">Fluent:</span><br>
-        <span class="w3-margin-left"> - English</span><br>
-        <span class="w3-margin-left"> - Mandarin</span><br>
+        <span class="w3-margin-left">English</span><br>
+        <span class="w3-margin-left">Mandarin</span><br>
       </li>   
       <li class="w3-padding-16">
       	<span class='w3-large'>Conversational</span><br>
-      	<span class="w3-margin-left"> - Cantonese</span><br>
-        <span class="w3-margin-left"> - Japanese</span><br>
-        <span class="w3-margin-left"> - Korean</span> 
+      	<span class="w3-margin-left">Cantonese</span><br>
+        <span class="w3-margin-left">Japanese</span><br>
+        <span class="w3-margin-left">Korean</span> 
     </ul>
   </div>
  
