--- a/blogposts.html
+++ b/blogposts.html
@@ -21,13 +21,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Header -->
 <div class="w3-top">
   <div class="w3-bar w3-padding w3-card" style="letter-spacing:4px; background-color: #F5E1FD">
-      <a href="index.html" class="w3-bar-item w3-button">Courtney Kaye Mok</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="index.html" class="w3-bar-item w3-button">About</a>
-      <a href="blogposts.html" class="w3-bar-item w3-button">Blog Posts</a>
-      <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-button">Resume</a>
-    </div>
+    <img src="CM_Logo.png" class="w3-bar-item" style="width:80px">
+    <a class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
+    <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Resume</a>
+    <a href="blogposts.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Blog Posts</a>
+    <a href="index.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">About</a>
+    
   </div>
 </div>
 <div class="w3-panel">
@@ -35,11 +34,10 @@ and is wrapped around the whole page content, except for the footer in this exam
 <p></p>
 <p></p>
 </div>
-<div class="w3-cell">
 
 <!--Blog Header -->
 <div class="w3-cell l8 s12">
-  <div style="padding-top: :10px">
+  <div style="padding-top: 40px">
   <div id="BlogPosts" class="w3-card-4 w3-margin"  style="background-color: #F5E1FD">
     <div class="w3-container">
     <h1><b>Blog Posts</b></h1>
@@ -57,8 +55,8 @@ and is wrapped around the whole page content, except for the footer in this exam
     <h2><b>My Journey to GA</b></h2><h5><i>January 7, 2022</i></h5>
   </div>
       <div class="w3-container" style="font-size: 15px"><br>
-        <p> &emsp; I grew up bouncing around schools and cities. Hong Kong for the first formative twelve years of my life to the suburbs of Pennsylvania to the grand city of Shanghai to the big apple New York City. It seemed like just when I was about to catch my breath we would be packing up, ready to move again. Like most third culture kids I molded myself to fit my new environments and ended up developing an eclectic range of passions and interests. I loved art and math. Sewing and physics. I read classics and fantasy novels and then solved calculus equations to relax.Throughout it all I had a passion for puzzles and problem solving. Entering college, I struggled to find the major that would fit me. I wanted to be everything and anything. I considered Engineering or East Asian Studies or perhaps even Psychology. I wanted to do something meaningful that would just click and fit me perfectly...</p>
-        <button onclick="location.href='journey_to_ga.html';">Read More</button>
+        <p> &emsp; I grew up bouncing around schools and cities. Hong Kong for the first formative twelve years of my life to the suburbs of Pennsylvania to the grand city of Shanghai to the big apple New York City. It seemed like just when I was about to catch my breath we would be packing up, ready to move again. Like most third culture kids I molded myself to fit my new environments and ended up developing an eclectic range of passions and interests. I loved art and math. Sewing and physics. I read classics and fantasy novels and then solved calculus equations to relax. Throughout it all I had...</p>
+        <button onclick="location.href='journey_to_ga.html';" style='background-color: #936fc3; color: white; cursor: pointer; border-radius: 8px'>Read More</button>
         <br>
         <br>
 
