--- a/index.html
+++ b/index.html
@@ -20,26 +20,25 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Header -->
 <div class="w3-top">
   <div class="w3-bar w3-padding w3-card" style="letter-spacing:4px; background-color: #F5E1FD">
-    <a href="index.html" class="w3-bar-item w3-button">Courtney Kaye Mok</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="index.html" class="w3-bar-item w3-button">About</a>
-      <a href="blogposts.html" class="w3-bar-item w3-button">Blog Posts</a>
-      <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-button">Resume</a>
-    </div>
+    <img src="CM_Logo.png" class="w3-bar-item" style="width:80px">
+    <a class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
+    <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Resume</a>
+    <a href="blogposts.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Blog Posts</a>
+    <a href="index.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">About</a>
+    
+    
   </div>
 </div>
-<div class="w3-panel w3-2018-blooming-dahlias">
+<div class="w3-panel">
 <p></p>
 <p></p>
 <p></p>
 </div>
 
 <!-- Grid -->
-<div class="w3-cell">
-
+<div class="w3-cell" >
 <!-- Blog entries -->
-<div class="w3-cell l8 s12">
+<div class="w3-cell l8 s12" style="padding-top: 40px">
   <!-- About Me -->
   <div id="about" class="w3-card-4 w3-margin w3-camo-black" style="font-family:consolas;">
  	 <div class="w3-cell m6 w3-padding-large w3-container">
@@ -76,11 +75,11 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div id="Education" class="w3-card-4 w3-margin"  style="background-color: #F5E1FD">
     <div class="w3-container">
       <h2><b>Education</b></h2>
-      <h5><b>Barnard College of Columbia University </b><span class="w3-opacity"> May 2020</span></h5>
+      <h4><b>Barnard College of Columbia University </b><span class="w3-opacity"> May 2020</span></h4>
     </div>
     <div class="w3-container w3-margin-left ">
-    	<h6><b>Major:</b> Computer Science - Intelligent Systems</h6>
-    	<h6><b>Computer Science Coursework:</b></h6>
+    	<h4><b>Major:</b> Computer Science - Intelligent Systems</h4>
+    	<h5><b>Relavant Coursework:</b></h5>
       <ul style="list-style-type: circle;">
       	<li>Artificial Intelligence</li>
         <li>Natural Language Processing</li>
@@ -110,12 +109,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Introduction menu -->
 <div class="w3-cell">
   <!-- About Card -->
-  <div class="w3-card w3-margin w3-margin-top">
-    <div class="w3-container"  style="background-color: #F5E1FD">
+  <div class="w3-card w3-margin">
+    <div class="w3-container" style="background-color: #F5E1FD;">
       <h4 class="w3-text-dark-gray w3-center"><b><i>Contact Me</i></b></h4>
-      <p><i class="fa fa-phone fa-fw w3-margin-right w3-2018-blooming-dahlia"></i>610-751-7994</p>
-      <p><i class="fa fa-envelope fa-fw w3-2018-blooming-dahlia"></i>courtney.mok.hk@gmail.com</p>
-      <p><i class="fa fa-home fa-fw w3-margin-right w3-2018-blooming-dahlia"></i>New York/Hong Kong</p>
+      <p><i class="fa fa-phone fa-fw w3-margin-right" style="background-color: #b399d4"></i><br>610-751-7994</p>
+      <p><i class="fa fa-envelope fa-fw w3-margin-right" style="background-color: #b399d4"></i>courtney.mok.hk@gmail.com</p>
+      <p><i class="fa fa-home fa-fw w3-margin-right" style="background-color: #b399d4"></i><br>New York/Hong Kong</p>
     </div>
   </div>
   
@@ -149,7 +148,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <span class="w3-margin-left">Procreate</span><br>
       </li> 
       <div class="w3-container w3-padding">
-      <h3 class="w3-center w3-text-dark-gray"><b>Languages</b></h3>
+      <h3 class="w3-center w3-text-dark-gray"><b>Spoken Languages</b></h3>
   		</div>
       <li class="w3-padding-16">
         <span class="w3-large">Fluent:</span><br>
