--- a/journey_to_ga.html
+++ b/journey_to_ga.html
@@ -17,16 +17,16 @@ ul, p {margin-top:-1px;}
 <!-- w3-content defines a container for fixed size centered content, 
 and is wrapped around the whole page content, except for the footer in this example -->
 
+
 <!-- Header -->
 <div class="w3-top">
   <div class="w3-bar w3-padding w3-card" style="letter-spacing:4px; background-color: #F5E1FD">
-      <a href="index.html" class="w3-bar-item w3-button">Courtney Kaye Mok</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="index.html" class="w3-bar-item w3-button">About</a>
-      <a href="blogposts.html" class="w3-bar-item w3-button">Blog Posts</a>
-      <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-button">Resume</a>
-    </div>
+    <img src="CM_Logo.png" class="w3-bar-item" style="width:80px">
+    <a class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
+    <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Resume</a>
+    <a href="blogposts.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Blog Posts</a>
+    <a href="index.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">About</a>
+    
   </div>
 </div>
 <div class="w3-panel">
@@ -34,13 +34,13 @@ and is wrapped around the whole page content, except for the footer in this exam
 <p></p>
 <p></p>
 </div>
-<div class="w3-cell">
 
-<!-- Blog entries -->
+<!--Blog Header -->
 <div class="w3-cell l8 s12">
-  <div style="padding-top: :10px">
+  <div style="padding-top: 40px">
   <div id="BlogPosts" class="w3-card-4 w3-margin"  style="background-color: #F5E1FD">
-    <div class="w3-container">
+    <div class="w3-container" style="padding-top: 10px">
+    <a href='blogposts.html'> << Go Back </a>
     <h2><b>My Journey to GA</b></h2><h5><i>January 7, 2022</i></h5>
   </div>
       <div class="w3-container" style="font-size: 15px"><br>
