--- a/blogposts.html
+++ b/blogposts.html
@@ -1,70 +1,77 @@
-<!DOCTYPE html>
+<!DOCTYPE htm>
 <html>
-<title>Courtney Kaye Mok</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2018.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-camo.css">
-<style>
-body,h1,h2,h3,h4,h5,h6,h7,h8,h9 {margin-top:-1px;margin-bottom:-1px; font-family: "Raleway", sans-serif}
-ul, p {margin-top:-1px;}
 
-</style>
-<body style="background-color: #b399d4">
+<head>
+    <title> Courtney Kaye Mok</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
+</head>
 
-<!-- w3-content defines a container for fixed size centered content, 
-and is wrapped around the whole page content, except for the footer in this example -->
+<body>
+    <div class="w3-top">
+        <div class="w3-bar w3-padding w3-card">
+            <img src="./assets/CM_Logo.png" class="w3-bar-item" style="width:80px">
+            <a href="home.html" class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
+            <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right">Resume</a>
+            <a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>
+            <a href="home.html#about" class="w3-bar-item w3-right">About</a>
+        </div>
+    </div>
 
-<!-- Header -->
-<div class="w3-top">
-  <div class="w3-bar w3-padding w3-card" style="letter-spacing:4px; background-color: #F5E1FD">
-    <img src="CM_Logo.png" class="w3-bar-item" style="width:80px">
-    <a class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
-    <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Resume</a>
-    <a href="blogposts.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">Blog Posts</a>
-    <a href="index.html" class="w3-bar-item w3-right w3-button"style="margin-top: 15px">About</a>
-    
-  </div>
-</div>
-<div class="w3-panel">
-<p></p>
-<p></p>
-<p></p>
-</div>
+    <div class="w3-panel">
+        <p></p>
+    </div>
+    <!--Blog Header -->
+    <div class="w3-container" id='section' style="background-color: rgb(246, 246, 246);">
+        <div class="w3-row">
+            <div class="w3-container" style='text-align: center;'>
+                <h1 style='font-family: Raleway;'><b>Blog Posts</b></h1>
+                <h4 style='font-family: Raleway;'> A collection of posts all about me and my data science journey. I'll be exploring personal insights, things in data science that interest me, as well as projects I've worked on. Enjoy my meadering and have fun on this ride with me!</h4>
+                <br>
 
-<!--Blog Header -->
-<div class="w3-cell l8 s12">
-  <div style="padding-top: 40px">
-  <div id="BlogPosts" class="w3-card-4 w3-margin"  style="background-color: #F5E1FD">
-    <div class="w3-container">
-    <h1><b>Blog Posts</b></h1>
-    <h4> A collection of posts all about me and my data science journey. I'll be exploring personal insights, things in data science that interest me, as well as projects I've worked on. Enjoy my meadering and have fun on this ride with me!</h4>
-    <br>
 
-  	</div>
- </div>
+            </div>
+        </div>
+    </div>
 
-<!-- Blog entries -->
-<div class="w3-cell l8 s12">
-  <div style="padding-top: :10px">
-  <div id="BlogPosts" class="w3-card-4 w3-margin"  style="background-color: #F5E1FD">
-    <div class="w3-container">
-    <h2><b>My Journey to GA</b></h2><h5><i>January 7, 2022</i></h5>
-  </div>
-      <div class="w3-container" style="font-size: 15px"><br>
-        <p> &emsp; I grew up bouncing around schools and cities. Hong Kong for the first formative twelve years of my life to the suburbs of Pennsylvania to the grand city of Shanghai to the big apple New York City. It seemed like just when I was about to catch my breath we would be packing up, ready to move again. Like most third culture kids I molded myself to fit my new environments and ended up developing an eclectic range of passions and interests. I loved art and math. Sewing and physics. I read classics and fantasy novels and then solved calculus equations to relax. Throughout it all I had...</p>
-        <button onclick="location.href='journey_to_ga.html';" style='background-color: #936fc3; color: white; cursor: pointer; border-radius: 8px'>Read More</button>
-        <br>
-        <br>
+    <!-- Blog entries -->
+    <div class="w3-cell l8 s12">
+        <div style="padding-top:10px,">
+            <div class="w3-margin">
+                <div class="w3-container">
+                    <h2 style='font-family: Raleway;'><b>My Journey to GA</b></h2>
+                    <h5 style='font-family: Raleway;'><i>January 7, 2022</i></h5>
+                </div>
+                <div class="w3-container" style="font-size: 15px"><br>
+                    <blockquote>
+                        <p> &emsp; I grew up bouncing around schools and cities. Hong Kong for the first formative twelve years of my life to the suburbs of Pennsylvania to the grand city of Shanghai to the big apple New York City. It seemed like just when
+                            I was about to catch my breath we would be packing up, ready to move again. Like most third culture kids I molded myself to fit my new environments and ended up developing an eclectic range of passions and interests. I loved
+                            art and math. Sewing and physics. I read classics and fantasy novels and then solved calculus equations to relax. Throughout it all I had...</p>
 
-  </div>
-  </div>
-</div>
-</div>
-<!--End Blogpost 1-->
-</div>
+                        <button class="primary-btn" onclick="location.href='journey_to_ga.html';">READ MORE</button>
+                        <br>
+                        <br>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End Blogpost 1-->
+    </div>
+    </div>
+
+    <!--Footer-->
+    <footer class="w3-container w3-center w3-margin-top" style="background-color: #F5E1FD">
+        <p>Find me on social media.</p>
+        <i class="fa fa-instagram w3-hover-opacity">&emsp;&emsp;</i>
+        <i class="fa fa-github w3-hover-opacity">&emsp;&emsp;</i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    </footer>
 </body>
+
 </html>
