--- a/blogposts.html
+++ b/blogposts.html
@@ -30,7 +30,7 @@
         <div class="w3-row">
             <div class="w3-container" style='text-align: center;'>
                 <h1 style='font-family: Raleway;'><b>Blog Posts</b></h1>
-                <h4 style='font-family: Raleway;'> A collection of posts all about me and my data science journey. I'll be exploring personal insights, things in data science that interest me, as well as projects I've worked on. Enjoy my meadering and have fun on this ride with me!</h4>
+                <h4 style='font-family: Raleway;'> A collection of posts all about me and my data science journey. I'll be exploring personal insights, things in data science that interest me, as well as projects I've worked on. Enjoy my meandering and have fun on this ride with me!</h4>
                 <br>
 
 
