--- a/journey_to_ga.html
+++ b/journey_to_ga.html
@@ -71,6 +71,7 @@
                         <p>&emsp;With this course, I hope to develop myself into a Data Scientist. I want to use all of my past experiences to bring myself into a field I truly enjoy. I want to use data to build meaningful models, create innovative visualizations,
                             and make a long-lasting impact in my field. I hope to invest my time and energy into a company and do good work that I can be proud of. I have already begun calling myself a Data Scientist, but someday I hope to truly earn
                             that title, and be able to call myself a Data Scientist with pride. </p>
+                        <button class="primary-btn" onclick="location.href='blogposts.html#BlogPost1';">READ LESS</button>
                     </blockquote>
                 </div>
             </div>
