--- a/blogposts.html
+++ b/blogposts.html
@@ -5,6 +5,7 @@
     <title> Courtney Kaye Mok</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,10 +16,12 @@
     <div class="w3-top">
         <div class="w3-bar w3-padding w3-card">
             <img src="./assets/CM_Logo.png" class="w3-bar-item" style="width:80px">
-            <a href="home.html" class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
+            <a href="index.html" class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
             <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right">Resume</a>
             <a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>
-            <a href="home.html#about" class="w3-bar-item w3-right">About</a>
+            <a href="index.html#about" class="w3-bar-item w3-right">Luna</a>
+            <a href="index.html#about" class="w3-bar-item w3-right">Portfolio</a>
+            <a href="index.html#about" class="w3-bar-item w3-right">About</a>
         </div>
     </div>
 
@@ -29,7 +32,9 @@
     <div class="w3-container" id='section' style="background-color: rgb(246, 246, 246);">
         <div class="w3-row">
             <div class="w3-container" style='text-align: center;'>
-                <h1 style='font-family: Raleway;'><b>Blog Posts</b></h1>
+
+                <h6 id="code"><i>class </i><b id="purple" style='font-size: 3vw;'>Blog_Posts</b><span id='grey'>():</span> </h6>
+
                 <h4 style='font-family: Raleway;'> A collection of posts all about me and my data science journey. I'll be exploring personal insights, things in data science that interest me, as well as projects I've worked on. Enjoy my meandering and have fun on this ride with me!</h4>
                 <br>
 
