--- a/journey_to_ga.html
+++ b/journey_to_ga.html
@@ -5,6 +5,7 @@
     <title> Courtney Kaye Mok</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,10 +16,12 @@
     <div class="w3-top">
         <div class="w3-bar w3-padding w3-card">
             <img src="./assets/CM_Logo.png" class="w3-bar-item" style="width:80px">
-            <a href="home.html" class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
+            <a href="index.html" class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
             <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right">Resume</a>
             <a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>
-            <a href="home.html#about" class="w3-bar-item w3-right">About</a>
+            <a href="index.html#about" class="w3-bar-item w3-right">Luna</a>
+            <a href="index.html#about" class="w3-bar-item w3-right">Portfolio</a>
+            <a href="index.html#about" class="w3-bar-item w3-right">About</a>
         </div>
     </div>
     <div class="w3-panel">
@@ -32,10 +35,8 @@
         <div style="padding-top: 40px">
             <div id="BlogPosts" class="w3-margin">
                 <div class="w3-container" style="padding-top: 10px">
-                    <a href='blogposts.html'>
-                        << Go Back </a>
-                            <h2 style='font-family: Raleway;'><b>My Journey to GA</b></h2>
-                            <h5 style='font-family: Raleway;'><i>January 7, 2022</i></h5>
+                    <h2 style='font-family: Raleway;'><b>My Journey to GA</b></h2>
+                    <h5 style='font-family: Raleway;'><i>January 7, 2022</i></h5>
                 </div>
                 <div class="w3-container" style="font-size: 15px"><br>
                     <blockquote>
