added portfolio & pet pages

--- a/blogposts.html
+++ b/blogposts.html
@@ -17,14 +17,15 @@
         <div class="w3-bar w3-padding w3-card">
             <img src="./assets/CM_Logo.png" class="w3-bar-item" style="width:80px">
             <a href="index.html" class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
-            <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right">Resume</a>
-            <a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">Luna</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">Portfolio</a>
+            <a href="./assets/Resume.pdf" target="_blank" class="w3-bar-item w3-right">Resume</a>
+            <!--<a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>-->
+            <a href="lulu_lala.html" class="w3-bar-item w3-right">♡ LuLu & LaLa ♡</a>
+            <a href="portfolio.html" class="w3-bar-item w3-right">Portfolio</a>
             <a href="index.html#about" class="w3-bar-item w3-right">About</a>
         </div>
     </div>
 
+    <!--Intro-->
     <div class="w3-panel">
         <p></p>
     </div>
@@ -37,7 +38,6 @@
 
                 <h4 style='font-family: Raleway;'> A collection of posts all about me and my data science journey. I'll be exploring personal insights, things in data science that interest me, as well as projects I've worked on. Enjoy my meandering and have fun on this ride with me!</h4>
                 <br>
-
 
             </div>
         </div>
@@ -72,9 +72,8 @@
     <!--Footer-->
     <footer class="w3-container w3-center w3-margin-top" style="background-color: #F5E1FD">
         <p>Find me on social media.</p>
-        <i class="fa fa-instagram w3-hover-opacity">&emsp;&emsp;</i>
-        <i class="fa fa-github w3-hover-opacity">&emsp;&emsp;</i>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        <a href="https://github.com/courtmok" target="_blank"><i class="fa fa-github w3-hover-opacity">&emsp;&emsp;</i></a>
+        <a href="https://www.linkedin.com/in/courtneykayemok/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
 </body>
