updated about page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!--<a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>-->
             <a href="lulu_lala.html" class="w3-bar-item w3-right">♡ LuLu & LaLa ♡</a>
             <a href="portfolio.html" class="w3-bar-item w3-right">Portfolio</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">About</a>
+            <a href="about.html" class="w3-bar-item w3-right">About</a>
         </div>
     </div>
 
@@ -61,6 +61,9 @@
                 <div class="css-typing">
                     <h7 id="blue"><i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;self.</i><span id="purple">github</span><span id="grey"> = </span><a href="https://github.com/courtmok" target="_blank"><span id="string">"GitHub"</span></a></h7>
                 </div>
+                <div class="css-typing">
+                    <h7 id="blue"><i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;self.</i><span id="purple">contact</span><span id="grey"> = </span><a href="mailto: courtney.mok.hk@gmail.com" target="_blank"><span id="string">"Email"</span></a></h7>
+                </div>
             </div>
             <div class="w3-col m3 w3-right-align w3-margin-left">
                 <img src="./assets/me.jpg" alt="me" style="width:35vw; border-radius: 50%;">
@@ -73,7 +76,7 @@
     <div class="w3-container w3-margin-top" style="margin-left: 20px;">
         <div class="w3-row w3-margin">
             <div class="w3-col m3 w3-center w3-margin-right" style="padding-top: 100px;">
-                <h6 id="blue" style="font-family:consolas;"><i>self.</i><span id="purple">about</h6>
+                <h6 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">about</h6>
                     <img src="./assets/CM_Logo.png" alt="logo" style="width:20vw;">
             </div>
             <div class="w3-col m8 w3-left-align w3-right" id="about">
@@ -88,7 +91,8 @@
                     I picked up Japanese and Korean. In my spare time I enjoy playing video games, making digital art, and playing with <a href="Luna.html" class="current_project">my pets</a> 
                     Luna and Azula - who are the best girls in the entire world.
                     <br><br>
-                    <a href='./assets/Resume.pdf' target='_blank'><button class="primary-btn">DOWNLOAD MY RESUME</button></a>
+                    <a href='./assets/Resume.pdf' target='_blank'><button class="primary-btn">RESUME</button></a>
+                    <a href='mailto: courtney.mok.hk@gmail.com' target='_blank'><button class="primary-btn">CONTACT ME</button></a>
                 </blockquote>
                 
             </div>
@@ -98,7 +102,7 @@
     <!--End About-->
         <div class="w3-container" style="margin-left: 20px;">
             <div class="w3-row w3-margin">
-                <h6 id="blue" style="font-family:consolas;"><i>self.</i><span id="purple">current_project</h6>
+                <h6 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">current_project</h6>
                 <blockquote>
                     I'm currently working on an rhyme generator using IPA pronunciations, NLP, and sentiment analysis to help song writers find potential 
                     rhyming words for their lyrics. Rhyme generators online focus on finding perfect rhymes, but the world of songwriting is much broader 
