--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
             <!--<a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>-->
             <a href="lulu_lala.html" class="w3-bar-item w3-right">♡ LuLu & LaLa ♡</a>
             <a href="portfolio.html" class="w3-bar-item w3-right">Portfolio</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">About</a>
+            <a href="about.html" class="w3-bar-item w3-right">About</a>
         </div>
     </div>
 
