--- a/about.html
+++ b/about.html
@@ -17,13 +17,63 @@
         <div class="w3-bar w3-padding w3-card">
             <img src="./assets/CM_Logo.png" class="w3-bar-item" style="width:80px">
             <a href="index.html" class="w3-bar-item" style="margin-top: 10px; margin-left:0px;font-size: 20px">  Courtney Kaye Mok</a>
-            <a href="Resume.pdf" target="_blank" class="w3-bar-item w3-right">Resume</a>
-            <a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">Luna</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">Portfolio</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">About</a>
+            <a href="./assets/Resume.pdf" target="_blank" class="w3-bar-item w3-right">Resume</a>
+            <!--<a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>-->
+            <a href="lulu_lala.html" class="w3-bar-item w3-right">♡ LuLu & LaLa ♡</a>
+            <a href="portfolio.html" class="w3-bar-item w3-right">Portfolio</a>
+            <a href="about.html" class="w3-bar-item w3-right">About</a>
         </div>
     </div>
+
+    <div class="w3-panel">
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+    <!--Header -->
+    <div class="w3-container" id='section' style="background-color: rgb(246, 246, 246);">
+        <div class="w3-row">
+            <div class="w3-container" style='text-align: center;'>
+
+                <h6 id="code"><i>class </i><b id="purple" style='font-size: 3vw;'>About_Me</b><span id='grey'>:</span> </h6>
+
+                <h4 style='font-family: Raleway;'> I’m a data scientist with a background in Artificial Intelligence and Machine Learning with a passion for developing innovative data stories. I'm nterested in the intersection of data decision making and strive to develop creative and efficient solutions to challenging problems.</h4>
+                <br>
+
+            </div>
+        </div>
+    </div>
+    <div class="w3-container w3-margin-top" style="margin-left: 20px;">
+        <div class="w3-row w3-margin">
+            <div class="w3-col m3 w3-center w3-margin-right" style="padding-top: 100px;">
+                <h6 class="header">Who am I?</h6>
+                <img src="./assets/me&luna.jpg" alt="me" style="width:20vw; border-radius: 50%;">
+            </div>
+            <div class="w3-col m8 w3-left-align w3-right" id="about">
+
+                <blockquote>
+                    I’m a data scientist with a background in Artificial Intelligence and Machine Learning. 
+                    I graduated from Barnard College of Columbia University in the spring of 2020, majoring in Computer Science 
+                    with a focus on Intelligent Systems. I developed my love for data during an "Introduction to Data Visualizations" 
+                    course my senior year of college, where I discovered the innovative stories and real world impact one can create with data. 
+                    Post graduation I took an intensive Data Science course at General Assembly in order to learn more about working with data and 
+                    develop my applicable skills.  
+                    <br><br>
+                    I grew up in very international environments 
+                    <br><br>
+                    and a passion for developing innovative data stories. I have a passion for coding and to continue learning new libraries and develop my coding skills. I am interested
+                    in the intersection of data decision making and strive to develop creative and efficient solutions to challenging problems. I have experience self managing large solo projects, but I also thrive in cooperative environments as a leader
+                    and as a team player.
+                    <br><br> I love learning languages whether it's spoken languages or a computer languages. I grew up speaking Mandarin and Cantonese and in college I picked up Japanese and Korean. In my spare time I enjoy playing video games, making
+                    digital art, and playing with my dog Luna - who just so happends to be the best girl in the entire world.
+                    <br><br>
+                    <!--<button class="primary-btn">ABOUT ME</button>-->
+                </blockquote>
+
+            </div>
+        </div>
+    </div>
+
 </body>
 
 
