--- a/lulu_lala.html
+++ b/lulu_lala.html
@@ -21,7 +21,7 @@
             <!--<a href="blogposts.html" class="w3-bar-item w3-right">Blog Posts</a>-->
             <a href="lulu_lala.html" class="w3-bar-item w3-right">♡ LuLu & LaLa ♡</a>
             <a href="portfolio.html" class="w3-bar-item w3-right">Portfolio</a>
-            <a href="index.html#about" class="w3-bar-item w3-right">About</a>
+            <a href="about.html" class="w3-bar-item w3-right">About</a>
         </div>
     </div>
 
@@ -44,8 +44,8 @@
     <div class='w3-row w3-center' , style="padding-top: 100px; ">
         <div class='w3-padding' style="background-color: rgb(246, 246, 246); padding-bottom: 50px;">
             <div class='w3-left-align w3-padding'>
-                <h7 id="blue" style="font-family:consolas;"><i>self.</i><span id="purple">name</span><span id='grey'> = </span><span id='str'>"Luna"</span></h7>
-                <h7 id="blue" style="font-family:consolas;"><i>self.</i><span id="purple">about</span><span id='grey'> = </span></h7>
+                <h7 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">name</span><span id='grey'> = </span><span id='str'>"Luna"</span></h7>
+                <h7 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">about</span><span id='grey'> = </span></h7>
                 <h5 id='str'>"Manipulative. She is too smart for her own good and has a lot of sass for someone who doesn't pay any rent. Refuses to hold her own bones."</h5>
             </div>
             <div class='w3-column w3-margin-top' style='padding-bottom: 50px;'>
@@ -55,8 +55,8 @@
             </div>
         </div>
         <div class='w3-left-align w3-padding' style='margin-top:40px'>
-            <h7 id="blue" style="font-family:consolas;"><i>self.</i><span id="purple">name</span><span id='grey'> = </span><span id='str'>"Azula"</span></h7>
-            <h7 id="blue" style="font-family:consolas;"><i>self.</i><span id="purple">about</span><span id='grey'> = </span></h7>
+            <h7 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">name</span><span id='grey'> = </span><span id='str'>"Azula"</span></h7>
+            <h7 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">about</span><span id='grey'> = </span></h7>
             <h5 id='str'>"Just a noodle. Had half a braincell but then she lost it. She would like to contact you about your car's extended warrenty. "</h5>
 
         </div>
@@ -68,7 +68,7 @@
         </div>
         <div class='w3-padding' style="background-color: rgb(246, 246, 246); padding-bottom: 50px;">
             <div class='w3-left-align w3-padding' style='margin-top:40px'>
-                <h6 id="blue" style="font-family:consolas;"><i>self.</i><span id="purple">name</span><span id='grey'> = </span><span id='string'>"Us!"</span></h6>
+                <h6 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">name</span><span id='grey'> = </span><span id='string'>"Us!"</span></h6>
             </div>
             <div class='w3-column w3-margin-top' style='padding-bottom: 50px;'>
                 <img src='./assets/pet_photos/luna_5.jpg' class='insta'>
