made portfolio edits

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,18 +50,17 @@
         <div class="w3-row w3-margin">
             <div class="w3-col m3 w3-center w3-margin-right" style="padding-top: 100px;">
                 <h6 class="header">IPA Rhyme Generator</h6>
-                <img src="./assets/me.jpg" alt="me" style="width:20vw; border-radius: 50%;">
+                <img src="./assets/IPA.png" alt="me" style="width:20vw; border-radius: 50%;">
             </div>
             <div class="w3-col m8 w3-left-align w3-right" id="about">
 
                 <blockquote>
-                    I’m a data scientist with a background in Artificial Intelligence and Machine Learning and a passion for developing innovative data stories. I have a passion for coding and to continue learning new libraries and develop my coding skills. I am interested
-                    in the intersection of data decision making and strive to develop creative and efficient solutions to challenging problems. I have experience self managing large solo projects, but I also thrive in cooperative environments as a leader
-                    and as a team player.
-                    <br><br> I love learning languages whether it's spoken languages or a computer languages. I grew up speaking Mandarin and Cantonese and in college I picked up Japanese and Korean. In my spare time I enjoy playing video games, making
-                    digital art, and playing with my dog Luna - who just so happends to be the best girl in the entire world.
-                    <br><br>
-                    <!--<button class="primary-btn">ABOUT ME</button>-->
+                    A rhyme generator using IPA pronunciations and NLP to help song writers find potential rhyming words for their lyrics. Rhyme generators online focus on finding perfect rhymes, but the world of songwriting is much broader than that. Unlike mainstream rhyme generators I've math-ified IPA pronunciations to find perfect, family, additive/subtractive, and assonance rhymes, allowing users to select what type of rhyme best fits their song.
+                    So far I have built a rhyming dictionary for over 30,000 English words.
+                    I've pulled lyrical data of top 50 pop songs from 2015-2021 using the Genius API and have analyzed the rhyme patterns and specific words used in these songs in order to build a recommender model to help song writers get inspiration for their lyrics.
+                    <br>
+                    <br>
+                    <a href='./assets/Resume.pdf' target='_blank'><button class="primary-btn">REPO</button></a>
                 </blockquote>
 
             </div>
@@ -74,13 +73,13 @@
             <div class="w3-col m8 w3-left-align w3-left" id="about">
 
                 <blockquote>
-                    I’m a data scientist with a background in Artificial Intelligence and Machine Learning and a passion for developing innovative data stories. I have a passion for coding and to continue learning new libraries and develop my coding skills. I am interested
-                    in the intersection of data decision making and strive to develop creative and efficient solutions to challenging problems. I have experience self managing large solo projects, but I also thrive in cooperative environments as a leader
-                    and as a team player.
-                    <br><br> I love learning languages whether it's spoken languages or a computer languages. I grew up speaking Mandarin and Cantonese and in college I picked up Japanese and Korean. In my spare time I enjoy playing video games, making
-                    digital art, and playing with my dog Luna - who just so happends to be the best girl in the entire world.
-                    <br><br>
-                    <!--<button class="primary-btn">ABOUT ME</button>-->
+                    Both r/WritingPrompts and r/TwoSentenceHorror are subreddits made for people to show their literary creativity. Yet the sentiment behind these subreddits are quite different. 
+                    I wanted to see if the post we made is scary enough for r/TwoSentenceHorror, or if it belongs in r/WritingPrompts!
+
+                    I analyzed over 3000 posts from both subreddits in order to generate a machine learning model that classifed a post to either subreddit with a 96.62% accuracy. In order maintain the integrity of the model, I made sure to exculde subreddit specific tags.
+                    <br>
+                    <br>
+                    <a href='./assets/Resume.pdf' target='_blank'><button class="primary-btn">REPO</button></a>
                 </blockquote>
 
             </div>
@@ -102,13 +101,11 @@
             <div class="w3-col m8 w3-left-align w3-right" id="about">
 
                 <blockquote>
-                    I’m a data scientist with a background in Artificial Intelligence and Machine Learning and a passion for developing innovative data stories. I have a passion for coding and to continue learning new libraries and develop my coding skills. I am interested
-                    in the intersection of data decision making and strive to develop creative and efficient solutions to challenging problems. I have experience self managing large solo projects, but I also thrive in cooperative environments as a leader
-                    and as a team player.
-                    <br><br> I love learning languages whether it's spoken languages or a computer languages. I grew up speaking Mandarin and Cantonese and in college I picked up Japanese and Korean. In my spare time I enjoy playing video games, making
-                    digital art, and playing with my dog Luna - who just so happends to be the best girl in the entire world.
-                    <br><br>
-                    <!--<button class="primary-btn">ABOUT ME</button>-->
+                    "Jishinjiko" translates literally to "human incident" and is the Japanese term for a suicide by train. My team and I created a collaborative data story analyzing trends in these suicides. We scraped the raw data from the Laboneko website, cleaned it, and used LocationIQ's geocoding API to find the geolocation data of every station in Japan. 
+                    Using Tableau and JavaScript’s D3 library, we explored the data and created a data story with interactive data visualizations hosted on a <a href="https://japantrainincidents.github.io/" class="git">github webpage</a> 
+                    <br>
+                    <br>
+                    <a href='./assets/Resume.pdf' target='_blank'><button class="primary-btn">REPO</button></a>
                 </blockquote>
 
             </div>
