--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <div class="w3-container w3-margin-top" style="margin-left: 20px;">
         <div class="w3-row w3-margin">
             <div class="w3-col m3 w3-center w3-margin-right" style="padding-top: 100px;">
-                <h6 class="header">Who am I?</h6>
+                <h6 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">about</h6>
                 <img src="./assets/me&luna.jpg" alt="me" style="width:20vw; border-radius: 50%;">
             </div>
             <div class="w3-col m8 w3-left-align w3-right" id="about">
@@ -69,6 +69,22 @@
                     <br><br>
                     <!--<button class="primary-btn">ABOUT ME</button>-->
                 </blockquote>
+
+            </div>
+        </div>
+        <div class="w3-row w3-margin">
+            <div class="w3-col m3 w3-center w3-margin-right" style="padding-top: 100px;">
+                <h6 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">skills</h6>
+            </div>
+            <div class="w3-col m8 w3-left-align w3-right" id="about">
+
+            </div>
+        </div>
+        <div class="w3-row w3-margin">
+            <div class="w3-col m3 w3-center w3-margin-right" style="padding-top: 100px;">
+                <h6 id="blue" style="font-family:monaco;"><i>self.</i><span id="purple">education</h6>
+            </div>
+            <div class="w3-col m8 w3-left-align w3-right" id="about">
 
             </div>
         </div>
