--- a/about.html
+++ b/about.html
@@ -59,12 +59,9 @@
                     Post graduation I took an intensive Data Science course at General Assembly in order to learn more about working with data and 
                     develop my applicable skills.  
                     <br><br>
-                    I grew up in very international environments 
-                    <br><br>
-                    and a passion for developing innovative data stories. I have a passion for coding and to continue learning new libraries and develop my coding skills. I am interested
-                    in the intersection of data decision making and strive to develop creative and efficient solutions to challenging problems. I have experience self managing large solo projects, but I also thrive in cooperative environments as a leader
-                    and as a team player.
-                    <br><br> I love learning languages whether it's spoken languages or a computer languages. I grew up speaking Mandarin and Cantonese and in college I picked up Japanese and Korean. In my spare time I enjoy playing video games, making
+                    I grew up in very international environments learning different languages, which jumpstarted my love of language whether it's spoken or a computer. 
+                    I grew up speaking Mandarin and Cantonese and in college I picked up Japanese and Korean. In college I started my computer language journey with Java, later picking up Python which
+                    became my primary coding language. I also SQL, HTML/CSS and a bit of Javascript. In my spare time I enjoy playing video games, making
                     digital art, and playing with my dog Luna - who just so happends to be the best girl in the entire world.
                     <br><br>
                     <!--<button class="primary-btn">ABOUT ME</button>-->
